- fixed a bug where user's comments were not marked as theirs  - made 'click to expand highlight' span whole changeset's basic info section, without round corners and a visible-on-hover zclip (a bug) for now

--- a/web-app/css/codereview.css
+++ b/web-app/css/codereview.css
@@ -33,11 +33,20 @@ textarea {
     font-weight: bold;
 }
 
+.changeset.current-user .comment .author {
+    font-weight: normal;
+}
+
+.changeset .comment.current-user .author {
+    font-weight: bold;
+}
+
+
 .author {
     font-style: oblique;
 }
 
-.changeset .commitMessage:hover {
+.changeset .basicInfo:hover {
     background-color: rgba(255, 255, 255, 0.9);
 }
 
